Lisasin css, tegin algust menüüga

--- a/kontakt.html
+++ b/kontakt.html
@@ -1,20 +1,32 @@
 <html>
-	<head>
-	  <title>Kontakt</title>
-	</head>
-	<body>
-	  <div id="info">
-		<h2>Asukoht</h2>
-		  <p>P&aumlikese t&aumlnav 11c, Kesklinn, Tartu, 51004</p>
-		<h2>Kontakt</h2>
-		  <p>tel: 7 343 766 <br />
-			 mob: 50 68 431 <br />
-			 <br />			 
-			 <strong>Oleme avatud </strong> <br />
-			 P-N 10:00 - 22:00<br />
-			 R,L 10:00 - 01:00</p>
-	  <div id="üritused">
-		<h2>Tulevad &uumlritused</h2>
-			 
-	</body>
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <title>Kontakt</title>
+</head>
+<body>
+    <!-- Menüüriba -->
+    <div>
+        <ul>
+            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="menuu.html">Menüü</a></li>
+        </ul>
+    </div>
+
+    <div id="info">
+        <h2>Asukoht</h2>
+        <p>P&aumlikese t&aumlnav 11c, Kesklinn, Tartu, 51004</p>
+        <h2>Kontakt</h2>
+        <p>tel: 7 343 766 <br/>
+            mob: 50 68 431 <br/>
+            <br/>
+            <strong>Oleme avatud </strong> <br/>
+            P-N 10:00 - 22:00<br/>
+            R,L 10:00 - 01:00</p>
+        <div id="üritused">
+            <h2>Tulevad &uumlritused</h2>
+        </div>
+    </div>
+
+</body>
 </html>
