Lisasin avalehe faili ja lisasin avalehe valiku menüüribale.

--- a/kontakt.html
+++ b/kontakt.html
@@ -5,9 +5,11 @@
     <title>Kontakt</title>
 </head>
 <body>
+	<h1>Restoran ABC</h1>
     <!-- Menüüriba -->
     <div>
         <ul>
+			<li><a href="avaleht.html">Avaleht</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
             <li><a href="menuu.html">Menüü</a></li>
         </ul>
