--- a/menuu.html
+++ b/menuu.html
@@ -6,11 +6,13 @@
     <title>Menüü</title>
 </head>
 <body>
+	<h1>Restoran ABC</h1>
     <!-- Menüüriba -->
     <div>
         <ul>
-            <li><a href="kontakt.html">Kontakt</a></li>
+			<li><a href="avaleht.html">Avaleht</a></li>
             <li><a href="menuu.html">Menüü</a></li>
+			<li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </div>
 
