Lisasin git ignore ja parandasin vormingu ja menüü

--- a/joogid.html
+++ b/joogid.html
@@ -6,29 +6,29 @@
     <title>Joogid</title>
 </head>
 <body>
-	<h1>Restoran ABC</h1>
-    <!-- Menüüriba -->
-    <div>
-        <ul>
-            <li><a href="kontakt.html">Kontakt</a></li>
-            <li><a href="menuu.html">Menüü</a></li>
-        </ul>
-    </div>
+<h1>Restoran ABC</h1>
+<!-- Menüüriba -->
+<div>
+    <ul>
+        <li><a href="avaleht.html">Avaleht</a></li>
+        <li><a href="menuu.html">Menüü</a></li>
+        <li><a href="kontakt.html">Kontakt</a></li>
+    </ul>
+</div>
+<!-- Söökide menüüriba -->
+<div id="sisemine_menuu">
+    <ul>
+        <li><a href="soogid.html">Söögid</a></li>
+        <li><a href="joogid.html">Joogid</a></li>
+        <li><a href="magustoidud.html">Magustoidud</a></li>
+    </ul>
+</div>
 
-    <!-- Söökide menüüriba -->
-     <div id="sisemine_menuu">
-        <ul>
-            <li><a href="soogid.html">Söögid</a></li>
-            <li><a href="joogid.html">Joogid</a></li>
-            <li><a href="magustoidud.html">Magustoidud</a></li>
-        </ul>
-     </div>
-
-    <div id="sisemine_menuu_text">
-        Coca - 10€ <br>
-        Tee - 5€ <br>
-        Kohv - 8€
-    </div>
+<div id="sisemine_menuu_text">
+    Coca - 10€ <br>
+    Tee - 5€ <br>
+    Kohv - 8€
+</div>
 
 </body>
 </html>
