--- a/avaleht.html
+++ b/avaleht.html
@@ -6,7 +6,9 @@
     <title>Restoran</title>
 </head>
 <body>
-<h1>Restoran ABC</h1>
+<div class = "header">
+	<h1>Restoran ABC</h1>
+</div>
 <div>
     <ul>
         <li><a href="avaleht.html">Avaleht</a></li>
@@ -17,10 +19,10 @@
 <div class = "avaleht">
 	<div class = "kast">
 		<h2 class = "tutvustus">Meist</h2>
-		<p class = "tutvustus">Restoran ABC on hubane restoran Tartu kesklinnas.</br> Kasutame vaid kõige värskeimat
+		<p class = "tutvustus"></br>Restoran ABC on hubane restoran Tartu kesklinnas.</br> Kasutame vaid kõige värskeimat
 			kohalikku toorainet.</br> Lisaks suurepärasele köögile ja parimale toidule<br/> loovad restoranis
 			suurepärase meeleolu ka õdus miljöö,</br> hea muusika ja tõeliselt stiilne kaasaegne
-			interjöör.</br> Meie menüüst leiab elamusi igale maitsele. </br></br>
+			interjöör.</br> Meie menüüst leiab elamusi igale maitsele. </br></br></br>
 			Broneeri laud helistades <strong>(+372)55 555 555</strong> </br>või saada meil <strong>info@abcresto.ee</strong>.
 		</p>
 		</br>
