--- a/kontakt.html
+++ b/kontakt.html
@@ -7,7 +7,9 @@
     <title>Kontakt</title>
 </head>
 <body>
-	<h1>Restoran ABC</h1>
+	<div class = "header">
+		<h1>Restoran ABC</h1>
+	</div>
     <!-- Menüüriba -->
     <div>
         <ul>
