--- a/menuu.html
+++ b/menuu.html
@@ -6,7 +6,9 @@
     <title>Menüü</title>
 </head>
 <body>
-<h1>Restoran ABC</h1>
+	<div class = "header">
+		<h1>Restoran ABC</h1>
+	</div>
 <!-- Menüüriba -->
 <div>
     <ul>
