--- a/soogid.html
+++ b/soogid.html
@@ -6,7 +6,9 @@
     <title>Söögid</title>
 </head>
 <body>
-<h1>Restoran ABC</h1>
+	<div class = "header">
+		<h1>Restoran ABC</h1>
+	</div>
 <!-- Menüüriba -->
 <div>
     <ul>
