Sain menüü osa valmis, lisasin taustapildi

--- a/kontakt.html
+++ b/kontakt.html
@@ -5,12 +5,14 @@
     <title>Kontakt</title>
 </head>
 <body>
-<h1>Restoran ABC</h1>
+<h1>
+    <center>Restoran ABC</center>
+</h1>
 <!-- Menüüriba -->
 <div>
     <ul>
         <li><a href="avaleht.html">Avaleht</a></li>
-        <li><a href="menuu.html">Menüü</a></li>
+        <li><a href="soogid.html">Menüü</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
 </div>
