--- a/avaleht.html
+++ b/avaleht.html
@@ -6,11 +6,13 @@
     <title>Restoran</title>
 </head>
 <body>
-<h1>Restoran ABC</h1>
+<h1>
+    <center>Restoran ABC</center>
+</h1>
 <div>
     <ul>
         <li><a href="avaleht.html">Avaleht</a></li>
-        <li><a href="menuu.html">Menüü</a></li>
+        <li><a href="soogid.html">Menüü</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
 </div>
