--- a/magustoidud.html
+++ b/magustoidud.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="javascript.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <title>Magustoidud</title>
 </head>
-<body>
-<h1>Restoran ABC</h1>
+<body id="body_bg">
+<h1>
+    <center>Restoran ABC</center>
+</h1>
 <!-- Menüüriba -->
 <div>
     <ul>
         <li><a href="avaleht.html">Avaleht</a></li>
-        <li><a href="menuu.html">Menüü</a></li>
+        <li><a href="soogid.html">Menüü</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
 </div>
@@ -23,14 +27,39 @@
         <li><a href="joogid.html">Joogid</a></li>
         <li><a href="magustoidud.html">Magustoidud</a></li>
     </ul>
-</div>
 
-<div id="sisemine_menuu_text">
-    Kirsitort - 10€ <br>
-    Kommid - 5€ <br>
-    Kissell - 8€
-</div>
+    <img id="mt1" src="menuupildid/juustukook.jpg" alt="Juustukook" border="2px" style="border-color: white">
+    <img id="mt2" src="menuupildid/roosamaasikakook.jpg" alt="Roosa kook" border="2px" style="border-color: white">
+    <img id="mt3" src="menuupildid/sokolaadikook.jpg" alt="Sokolaadikook" border="2px" style="border-color: white">
+    <img id="mt4" src="menuupildid/sokolaadimaasikakook.jpg" alt="Sokolaadi-maasikakook" border="2px"
+         style="border-color: white">
 
+    <div id="par">
+        <br>
+        Juustukook<br>
+        <br>
+        3€
+    </div>
+    <div id="par">
+        <br>
+        Juustukook<br>
+        <br>
+        3€
+    </div>
+    <div id="par">
+        <br>
+        Juustukook<br>
+        <br>
+        3€
+    </div>
+    <div id="par">
+        <br>
+        Juustukook<br>
+        <br>
+        3€
+    </div>
+
+</div>
 
 </body>
 </html>
