--- a/avaleht.html
+++ b/avaleht.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style_Grete.css">
     <meta charset="UTF-8">
     <title>Restoran</title>
 </head>
