--- a/avaleht.html
+++ b/avaleht.html
@@ -6,11 +6,11 @@
     <title>Restoran</title>
 </head>
 <body>
-
-<h1>
-    <center>Restoran ABC</center>
-</h1>
-
+<div class = "header">
+	<h1>
+		<center>Restoran ABC</center>
+	</h1>
+</div>
 <div>
     <ul>
         <li><a href="avaleht.html">Avaleht</a></li>
