--- a/soogid.html
+++ b/soogid.html
@@ -35,7 +35,7 @@
     <img id="lohe" src="menuupildid/lohe.jpg" alt="Lõhe" border="2px" style="border-color: white">
     <img id="pasta" src="menuupildid/pasta.jpg" alt="Pasta" border="2px" style="border-color: white">
     <img id="tomatisupp" src="menuupildid/tomatisupp.jpg" alt="Tomatisupp" border="2px" style="border-color: white">
-    <img id="taimetoit" src="menuupildid/vegandish.jpg" alt="Taimetoit" border="2px" style="border-color: white">
+    <img id="taimetoit" src="menuupildid/vegandish.png" alt="Taimetoit" border="2px" style="border-color: white">
 
 
     <div id="par">
