lisasin headeri, muutsin avalehel telefoninumbreid, parandasin menüüle navigeerimise

--- a/kontakt.html
+++ b/kontakt.html
@@ -7,12 +7,14 @@
     <title>Kontakt</title>
 </head>
 <body id="info">
+<div class="header">
 	<h1><center>Restoran ABC</center></h1>
+</div>
     <!-- Menüüriba -->
     <div>
         <ul>
 			<li><a href="avaleht.html">Avaleht</a></li>
-            <li><a href="menuu.html">Menüü</a></li>
+            <li><a href="soogid.html">Menüü</a></li>
 			<li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </div>
@@ -21,6 +23,7 @@
 		<h2>Kontakt</h2>
         <p>tel: 7 343 766 <br/>
             mob: 50 68 431 <br/>
+			email: info@abcresto.ee
             <br/>
             <strong>Oleme avatud </strong> <br/>
             P-N 10:00 - 22:00<br/>
