--- a/kontakt.html
+++ b/kontakt.html
@@ -23,15 +23,11 @@
 		<h2>Kontakt</h2>
         <p>tel: 7 343 766 <br/>
             mob: 50 68 431 <br/>
-			email: info@abcresto.ee
-            <br/>
-            <strong>Oleme avatud </strong> <br/>
-            P-N 10:00 - 22:00<br/>
+			email: info@abcresto.ee<br>
+			aadress: P&aumlikese t&aumlnav 12c, Kesklinn, Tartu, 51004</p>
+        <h3>Oleme avatud</h3>
+            <p>P-N 10:00 - 22:00<br/>
             R, L 10:00 - 01:00</p>
-	</div>
-	<div class="kujundatav">
-        <h2>Asukoht</h2>
-        <p>P&aumlikese t&aumlnav 12c, Kesklinn, Tartu, 51004<br></p>
 		<h2>&Uumlritused</h2>
 	</div>
 		<!-- Slideshow container -->
@@ -71,6 +67,12 @@
 		
 		  
     </div>
+	<footer>
+	<p>
+		(+372)50 68 431 </br>
+		info@abcresto.ee
+	</p>
+</footer>
 
 </body>
 </html>
