muutsin avalehe nime indexiks ja muutsin failides linke

--- a/joogid.html
+++ b/joogid.html
@@ -15,7 +15,7 @@
 <!-- Menüüriba -->
 <div>
     <ul>
-        <li><a href="avaleht.html">Avaleht</a></li>
+        <li><a href="index.html">Avaleht</a></li>
         <li><a href="soogid.html">Menüü</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
