--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 <div>
     <ul>
-        <li><a href="avaleht.html">Avaleht</a></li>
+        <li><a href="index.html">Avaleht</a></li>
         <li><a href="soogid.html">Menüü</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
