muutsin pealkirju ja reavahetusi

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class = "header">
 	<h1>
-		<center>Restoran ABC</center>
+		Restoran ABC
 	</h1>
 </div>
 <div>
@@ -21,13 +21,13 @@
 <div class = "avaleht">
 	<div class = "kast">
 		<h2 class = "tutvustus">Meist</h2>
-		<p class = "tutvustus"></br>Restoran ABC on hubane restoran Tartu kesklinnas.</br> Kasutame vaid kõige värskeimat
-			kohalikku toorainet.</br> Lisaks suurepärasele köögile ja parimale toidule<br/> loovad restoranis
-			suurepärase meeleolu ka õdus miljöö,</br> hea muusika ja tõeliselt stiilne kaasaegne
-			interjöör.</br> Meie menüüst leiab elamusi igale maitsele. </br></br></br>
-			Broneeri laud helistades <strong>(+372)55 555 555</strong> </br>või saada meil <strong>info@abcresto.ee</strong>.
+		<p class = "tutvustus"><br>Restoran ABC on hubane restoran Tartu kesklinnas.<br> Kasutame vaid kõige värskemat
+			kohalikku toorainet.<br> Lisaks suurepärasele köögile ja parimale toidule<br> loovad restoranis
+			suurepärase meeleolu ka õdus miljöö,<br> hea muusika ja tõeliselt stiilne kaasaegne
+			interjöör.<br> Meie menüüst leiab elamusi igale maitsele. <br><br><br>
+			Broneeri laud helistades <strong>(+372)55 555 555</strong> <br>või saada meil <strong>info@abcresto.ee</strong>.
 		</p>
-		</br>
+		<br>
 		<table id = "ajad">
 			<tr>
 				<td>P-N</td>
@@ -41,7 +41,7 @@
 </div>
 <footer>
 	<p>
-		(+372)50 68 431 </br>
+		(+372)50 68 431 <br>
 		info@abcresto.ee
 	</p>
 </footer>
