--- a/kontakt.html
+++ b/kontakt.html
@@ -8,7 +8,7 @@
 </head>
 <body id="info">
 <div class="header">
-	<h1><center>Restoran ABC</center></h1>
+	<h1>Restoran ABC</h1>
 </div>
     <!-- Menüüriba -->
     <div>
@@ -21,12 +21,12 @@
 
     <div class="kujundatav">
 		<h2>Kontakt</h2>
-        <p>tel: 7 343 766 <br/>
-            mob: 50 68 431 <br/>
+        <p>tel: 7 343 766 <br>
+            mob: 50 68 431 <br>
 			email: info@abcresto.ee<br>
 			aadress: P&aumlikese t&aumlnav 12c, Kesklinn, Tartu, 51004</p>
         <h3>Oleme avatud</h3>
-            <p>P-N 10:00 - 22:00<br/>
+            <p>P-N 10:00 - 22:00<br>
             R, L 10:00 - 01:00</p>
 		<h2>&Uumlritused</h2>
 	</div>
@@ -56,7 +56,6 @@
 		  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 		  <a class="next" onclick="plusSlides(1)">&#10095;</a>
 		</div>
-		<br>
 
 		<!-- The dots/circles -->
 		<div style="text-align:center">
@@ -64,12 +63,9 @@
 		  <span class="dot" onclick="currentSlide(2)"></span>
 		  <span class="dot" onclick="currentSlide(3)"></span>
 		</div> 
-		
-		  
-    </div>
 	<footer>
 	<p>
-		(+372)50 68 431 </br>
+		(+372)50 68 431 <br>
 		info@abcresto.ee
 	</p>
 </footer>
