--- a/joogid.html
+++ b/joogid.html
@@ -33,25 +33,25 @@
     <img id="jook3" src="menuupildid/jook3.jpg" alt="Jook3" border="2px" style="border-color: white">
     <img id="jook4" src="menuupildid/jook4.png" alt="Jook4" border="2px" style="border-color: white">
 
-    <div id="par">
+    <div id="par1">
         <br>
         Jäävesi<br>
         <br>
         1.50€
     </div>
-    <div id="par">
+    <div id="par2">
         <br>
         Mahl<br>
         <br>
         3€
     </div>
-    <div id="par">
+    <div id="par3">
         <br>
         Jäätee<br>
         <br>
         4€
     </div>
-    <div id="par">
+    <div id="par4">
         <br>
         Mahl<br>
         <br>
