--- a/soogid.html
+++ b/soogid.html
@@ -38,25 +38,25 @@
     <img id="taimetoit" src="menuupildid/vegandish.png" alt="Taimetoit" border="2px" style="border-color: white">
 
 
-    <div id="par">
+    <div id="par1">
         <br>
         Lõhe<br>
         <br>
         8.50€
     </div>
-    <div id="par">
+    <div id="par2">
         <br>
         Pasta<br>
         <br>
         7.50€
     </div>
-    <div id="par">
+    <div id="par3">
         <br>
         Tomatisupp<br>
         <br>
         5€
     </div>
-    <div id="par">
+    <div id="par4">
         <br>
         Vegan salat<br>
         <br>
