--- a/magustoidud.html
+++ b/magustoidud.html
@@ -35,25 +35,25 @@
     <img id="mt4" src="menuupildid/sokolaadimaasikakook.jpg" alt="Sokolaadi-maasikakook" border="2px"
          style="border-color: white">
 
-    <div id="par">
+    <div id="par1">
         <br>
         Juustukook<br>
         <br>
         4.50€
     </div>
-    <div id="par">
+    <div id="par2">
         <br>
         Roosa juustukook<br>
         <br>
         8€
     </div>
-    <div id="par">
+    <div id="par3">
         <br>
         Šokolaadi-juustukook<br>
         <br>
         4€
     </div>
-    <div id="par">
+    <div id="par4">
         <br>
         Šokolaadikook<br>
         <br>
